; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/tools/extr_pngcp.c_text_restore.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Mupen64Plus/png/contrib/tools/extr_pngcp.c_text_restore.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.display = type { i32, i32*, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.display*)* @text_restore to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @text_restore(%struct.display* %0) #0 {
  %2 = alloca %struct.display*, align 8
  store %struct.display* %0, %struct.display** %2, align 8
  %3 = load %struct.display*, %struct.display** %2, align 8
  %4 = getelementptr inbounds %struct.display, %struct.display* %3, i32 0, i32 1
  %5 = load i32*, i32** %4, align 8
  %6 = icmp ne i32* %5, null
  br i1 %6, label %7, label %21

7:                                                ; preds = %1
  %8 = load %struct.display*, %struct.display** %2, align 8
  %9 = getelementptr inbounds %struct.display, %struct.display* %8, i32 0, i32 3
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.display*, %struct.display** %2, align 8
  %12 = getelementptr inbounds %struct.display, %struct.display* %11, i32 0, i32 2
  %13 = load i32, i32* %12, align 8
  %14 = load %struct.display*, %struct.display** %2, align 8
  %15 = getelementptr inbounds %struct.display, %struct.display* %14, i32 0, i32 1
  %16 = load i32*, i32** %15, align 8
  %17 = load %struct.display*, %struct.display** %2, align 8
  %18 = getelementptr inbounds %struct.display, %struct.display* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 8
  %20 = call i32 @png_set_text(i32 %10, i32 %13, i32* %16, i32 %19)
  br label %21

21:                                               ; preds = %7, %1
  ret void
}

declare dso_local i32 @png_set_text(i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
